--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register src/app.ts | ./node_modules/.bin/bunyan",
+    "start": "nodemon ./build/app.js",
+    "dev": "nodemon -r tsconfig-paths/register src/app.ts | node ./node_modules/bunyan/bin/bunyan",
     "lint:check": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "prettier:check": "prettier --check 'src/**/*.{ts,json}'",
-    "prettier:fix": "prettier --write 'src/**/*.{ts,json}'"
+    "prettier:fix": "prettier --write 'src/**/*.{ts,json}'",
+    "build": "ttsc -p ."
   },
   "keywords": [],
   "author": "",
@@ -15,12 +17,16 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.8.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bull": "^4.10.0",
     "@types/bunyan": "^1.8.11",
     "@types/compression": "^1.7.5",
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^9.8.0",
@@ -28,13 +34,21 @@
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
+    "ttsc": "^0.3.1",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.17.0"
   },
   "dependencies": {
+    "@bull-board/express": "^5.21.3",
+    "@bull-board/ui": "^5.21.3",
     "@socket.io/redis-adapter": "^8.3.0",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.16.0",
+    "bullmq": "^5.10.4",
     "bunyan": "^1.8.15",
+    "cloudinary": "^2.4.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
@@ -46,10 +60,16 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "loadash": "^1.0.0",
     "node": "^20.16.0",
     "node-cmd": "^5.0.0",
     "redis": "^4.6.15",
-    "socket.io": "^4.7.5"
+    "redis-commander": "^0.8.0",
+    "socket.io": "^4.7.5",
+    "ttypescript": "^1.5.15",
+    "typescript-transform-paths": "^3.4.7"
   },
   "description": ""
 }
