--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,12 +28,14 @@
       }
     ],
     "paths":{
+      "@reactions/*":["src/features/reactions/*"],
       "@auth/*":["src/features/auth/*"],
       "@user/*":["src/features/user/*"],
+      "@post/*":["src/features/post/*"],
       "@global/*":["src/shared/globals/*"],
       "@service/*":["src/shared/services/*"],
       "@socket/*":["src/shared/sockets/*"],
-      "@workers/*":["src/shared/workers/*"],
+      "@worker/*":["src/shared/workers/*"],
       "@root/*":["src/*"]
 
     }
