--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["DOM", "ES2015"],
     "baseUrl": ".",
     "outDir": "./build",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
     "noUnusedLocals": false,
@@ -28,7 +28,7 @@
       }
     ],
     "paths":{
-      "@reactions/*":["src/features/reactions/*"],
+      "@reaction/*":["src/features/reactions/*"],
       "@auth/*":["src/features/auth/*"],
       "@user/*":["src/features/user/*"],
       "@post/*":["src/features/post/*"],
