--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "@auth/*":["src/features/auth/*"],
       "@user/*":["src/features/user/*"],
       "@post/*":["src/features/post/*"],
+      "@comment/*":["src/features/comments/*"],
       "@global/*":["src/shared/globals/*"],
       "@service/*":["src/shared/services/*"],
       "@socket/*":["src/shared/sockets/*"],
