--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@post/*":["src/features/post/*"],
       "@comment/*":["src/features/comments/*"],
       "@follower/*":["src/features/followers/*"],
+      "@notification/*":["src/features/notifications/*"],
       "@global/*":["src/shared/globals/*"],
       "@service/*":["src/shared/services/*"],
       "@socket/*":["src/shared/sockets/*"],
