--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@sendgrid/mail": "^8.1.3",
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/jest": "^29.5.13",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
     "bullmq": "^5.21.2",
