feat: implement feature/seed-features

--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./build/app.js",
+    "start": "cross-env NODE_ENV=production  pm2 start ./build/src/app.js -i 8 --attach --watch  | node ./node_modules/bunyan/bin/bunyan",
+    "stop": "pm2 stop all",
+    "delete": "pm2 delete all",
+    "restart":"pm2 restart all",
     "dev": "nodemon -r tsconfig-paths/register src/app.ts | node ./node_modules/bunyan/bin/bunyan",
     "lint:check": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "prettier:check": "prettier --check 'src/**/*.{ts,json}'",
     "prettier:fix": "prettier --write 'src/**/*.{ts,json}'",
     "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandles --watchAll=false",
-    "build": "ttsc -p ."
+    "build": "ttsc -p .",
+    "seeds:dev": "npx ts-node src/seeds.ts ",
+    "seeds:prod": "npx ts-node ./build/src/seeds.js"
   },
   "keywords": [],
   "author": "",
@@ -31,8 +36,11 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
     "@types/nodemailer": "^6.4.16",
+    "@types/redis-info": "^3.0.3",
+    "@types/swagger-stats": "^0.95.11",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
@@ -49,6 +57,7 @@
   "dependencies": {
     "@bull-board/express": "^5.21.3",
     "@bull-board/ui": "^5.21.3",
+    "@faker-js/faker": "^9.3.0",
     "@sendgrid/mail": "^8.1.3",
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/jest": "^29.5.13",
@@ -57,6 +66,7 @@
     "bull": "^4.16.3",
     "bullmq": "^5.21.2",
     "bunyan": "^1.8.15",
+    "canvas": "^3.0.1",
     "cloudinary": "^2.4.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
@@ -76,9 +86,11 @@
     "node": "^20.16.0",
     "node-cmd": "^5.0.0",
     "nodemailer": "^6.9.15",
+    "pm2": "^5.4.3",
     "redis": "^4.7.0",
     "redis-commander": "^0.8.0",
     "socket.io": "^4.7.5",
+    "swagger-stats": "^0.99.7",
     "ttypescript": "^1.5.15",
     "typescript-transform-paths": "^3.4.7"
   },
