--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "cross-env NODE_ENV=production  pm2 start ./build/src/app.js -i 8 --attach --watch  | node ./node_modules/bunyan/bin/bunyan",
     "stop": "pm2 stop all",
     "delete": "pm2 delete all",
-    "restart":"pm2 restart all",
+    "restart": "pm2 restart all",
     "dev": "nodemon -r tsconfig-paths/register src/app.ts | node ./node_modules/bunyan/bin/bunyan",
     "lint:check": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -80,9 +80,11 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
+    "ip": "^2.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "loadash": "^1.0.0",
+    "mongoose": "^8.9.6",
     "node": "^20.16.0",
     "node-cmd": "^5.0.0",
     "nodemailer": "^6.9.15",
@@ -92,7 +94,8 @@
     "socket.io": "^4.7.5",
     "swagger-stats": "^0.99.7",
     "ttypescript": "^1.5.15",
-    "typescript-transform-paths": "^3.4.7"
+    "typescript-transform-paths": "^3.4.7",
+    "zip": "^1.2.0"
   },
   "description": ""
 }
