setup circleci configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,59 +49,59 @@ aliases:
       template: ''
       custom: |
         {
-        "blocks": [
-        {
-        "type": "header",
-        "text":{
-        "type": "plain_text",
-        "text": "Job Failed.",
-        "emoji": true
-        }
-        },
-        {
-        "type": "section",
-        "fields": [
-          {
-          "type": "mrkdwn",
-          "text": "*project*:\n$CIRCLE_PROJECT_REPONAME"
-          },
-          {
-          "type": "mrkdwn",
-          "text": "*Job*: ${CIRCLE_JOB}"
-          },
-          {
-          "type": "mrkdwn",
-          "text": "*Branch*:\n$CIRCLE_BRANCH"
-          },
-          {
-          "type": "mrkdwn",
-          "text": "*Branch*:\n$CIRCLE_BRANCH"
-          },
-          {
-          "type":"mrkdwn",
-          "text":"*when*:\n$(date +'%m/%d/%y %T')"
-          },
-          {
-          "type": "mrkdwn",
-          "text": "*Build*:\n$CIRCLE_BRANCH"_NUM"
-          },
-          {
-          "type": "mrkdwn",
-          "text": "Author*:\n$CIRCLE_PROJECT_USERNAME"
-          }
+          "blocks": [
+            {
+              "type": "header",
+              "text": {
+                "type": "plain_text",
+                "text": "Job Failed. 🔴",
+                "emoji": true
+              }
+            },
+            {
+              "type": "section",
+              "fields": [
+                {
+                  "type": "mrkdwn",
+                  "text": "*Project*:\n$CIRCLE_PROJECT_REPONAME"
+                },
+                {
+                  "type": "mrkdwn",
+                  "text": "*Job*: ${CIRCLE_JOB}"
+                },
+                {
+                  "type": "mrkdwn",
+                  "text": "*Branch*:\n$CIRCLE_BRANCH"
+                },
+                {
+                  "type": "mrkdwn",
+                  "text": "*When*:\n$(date +'%m/%d/%Y %T')"
+                },
+                {
+                  "type": "mrkdwn",
+                  "text": "*Build*:\n$CIRCLE_BUILD_NUM"
+                },
+                {
+                  "type": "mrkdwn",
+                  "text": "*Author*:\n$CIRCLE_PROJECT_USERNAME"
+                }
+              ]
+            },
+            {
+              "type": "actions",
+              "elements": [
+                {
+                  "type": "button",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "View Job"
+                  },
+                  "url": "${CIRCLE_BUILD_URL}"
+                }
+              ]
+            }
           ]
-          },
-          {
-          "type":"actions",
-          "text":{
-          "type": "plain_text",
-          "text": "View Job"
-          },
-          "url": "${CIRCLE_BUILD_URL}"
-          }
-        ]
         }
-
 jobs:
   "build":
     executor: app-executor
