--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
     steps:
       - checkout
       - *show-current-branch-name
+      - *install-dependencies
       - *restore-cache
       - run:
           name: Run prettier check
