--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,14 +119,13 @@ jobs:
       - *restore-cache
       - run:
           name: Run linting
-          command: npm run lint:check
+          command: npm run prettier:check
       - *notify-on-fail
   "code-formatter-check":
     executor: app-executor
     steps:
       - checkout
       - *show-current-branch-name
-      - *install-dependencies
       - *restore-cache
       - run:
           name: Run prettier check
